--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -6,3 +6,12 @@
         //width: 50%;
     }
 }
+
+.display {
+    .message {
+        min-height: 3em;
+    }
+    .details {
+        color: #666
+    }
+}
