--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,5 +1,11 @@
 @import "~foundation-sites/scss/foundation";
-@include foundation-everything;
+@include foundation-global-styles;
+@include foundation-flex-grid;
+@include foundation-typography;
+@include foundation-forms;
+@include foundation-button;
+@include foundation-button-group;
+@include foundation-callout;
 
 .stackForm {
     label {
